# nanopdf

./: .gitattributes  .gitignore  BRANCH-PROTECTION.md  CHANGELOG.md  COMPATIBILITY.md  FFI_ARCHITECTURE_ISSUES.md  FFI_COMPATIBILITY_AUDIT.md  NODEJS_API_AUDIT.md  PDFCPU_EXTENSION_OPPORTUNITIES.md  PROJECT_STATUS.md  PYPDF_FEATURE_COMPARISON.md  README.md  REPORTLAB_EXTENSION_OPPORTUNITIES.md
.cursor/rules/: branch-protection.mdc  commit-after-task.mdc  documentation.mdc  git-flow.mdc  no-auto-summaries.mdc  no-markdown-creation.mdc  no-stub-implementations.mdc  rust-standards.mdc  test-coverage.mdc
.github/: LFS-SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  pages.yml  release-packages.yml  release.yml  test-go-bindings.yml  test-nodejs-bindings.yml
docs/: FFI_ARCHITECTURE_ISSUES.md  FFI_COMPATIBILITY_AUDIT.md  FFI_COMPLETION_SUMMARY.md  FPDF_EXTENSION_OPPORTUNITIES.md  PDFCPU_EXTENSION_OPPORTUNITIES.md  PYPDF_FEATURE_COMPARISON.md  REPORTLAB_EXTENSION_OPPORTUNITIES.md  index.html
docs/api/: index.html
go-nanopdf/: EASY_API.md  README.md  buffer.go  colorspace.go  colorspace_test.go  context.go  context_test.go  cookie.go  cookie_test.go  device.go  device_test.go  document.go  document_test.go  errors.go  font.go  font_test.go  geometry.go  image.go  native_cgo.go  native_mock.go  output.go  output_test.go  page.go  page_test.go  path.go  path_test.go  pixmap.go  pixmap_test.go  stream.go  stream_test.go
go-nanopdf/docker/: README.md
go-nanopdf/easy/: easy.go
go-nanopdf/example/: main.go
go-nanopdf/examples/: easy_api_examples.go
go-nanopdf/include/: nanopdf.h  nanopdf_ffi.h
nanopdf-js/: .editorconfig  .npmignore  .prettierignore  .prettierrc.json  BUN.md  DENO.md  FFI_DEEP_WORK_SUMMARY.md  FFI_IMPLEMENTATION_STATUS.md  FFI_SESSION_FINAL.md  FFI_STATUS.md  LINTING.md  README.md  RUST_CORE_INTEGRATION.md  SESSION_SUMMARY.md  binding.gyp  bun.ts  deno.json  eslint.config.js  mod.ts  package.json  pnpm-lock.yaml  test-native.cjs  tsconfig.json  typedoc-theme.css
nanopdf-js/bun/: pixmap.ts
nanopdf-js/deno/: context.ts  document.ts  ffi.ts  pixmap.ts
nanopdf-js/docker/: .dockerignore  Dockerfile.test  README.md  build-test.sh
nanopdf-js/examples/: easy-api-examples.ts
nanopdf-js/native/: colorspace.cc  context.cc  cookie.cc  display_list.cc  document.cc  font.cc  image.cc  link.cc  nanopdf.cc  output.cc  page.cc  path.cc  pixmap.cc  stext.cc
nanopdf-js/scripts/: build-from-rust.js  install.js
nanopdf-js/src/: annot.ts  archive.ts  buffer.ts  colorspace.ts  context.ts  cookie.ts  device.ts  display-list.ts  document.ts  easy.ts  enhanced.ts  filter.ts  font.ts  form.ts  geometry.test.ts  geometry.ts  image.ts  index.ts  link.ts  nanopdf.ts  native.ts  output.ts  path.ts  pixmap.ts  render-options.ts  simple.ts  stext.ts  stream.ts  text.ts  types.ts
nanopdf-js/test/: annot.test.ts  archive.test.ts  (+22 more)
nanopdf-py/: .gitignore  README.md  pyproject.toml
nanopdf-py/docs/: Makefile  conf.py  index.rst
nanopdf-py/docs/_static/: custom.css
nanopdf-py/docs/api/: buffer.rst  colorspace.rst  context.rst  document.rst  easy.rst  errors.rst  geometry.rst  pixmap.rst
nanopdf-py/docs/development/: architecture.rst  contributing.rst  testing.rst
nanopdf-py/docs/guides/: easy_api.rst  examples.rst  installation.rst  low_level_api.rst  quickstart.rst
nanopdf-py/docs/tutorials/: metadata.rst  rendering.rst  searching.rst  text_extraction.rst
nanopdf-py/examples/: basic_usage.py
nanopdf-py/src/nanopdf/: __init__.py  buffer.py  colorspace.py  context.py  document.py  easy.py  errors.py  ffi.py  geometry.py  pixmap.py  version.py
nanopdf-py/tests/: __init__.py  test_geometry.py
nanopdf-rs/: BUILDING.md  CHANGELOG.md  Cargo.toml  MUPDF_COMPAT_AUDIT.md  Makefile  PKG-CONFIG.md  README.md  build.rs  clippy.toml  mupdf.pc.in  nanopdf.pc.in
nanopdf-rs/benches/: README.md  archive.rs  buffer.rs  colorspace.rs  device.rs  filters.rs  font.rs  geometry.rs  image.rs  output.rs  path.rs  pdf_objects.rs  pixmap.rs  stream.rs  text.rs
nanopdf-rs/coverage/: tarpaulin-report.html
nanopdf-rs/docker/: Dockerfile.deb  Dockerfile.debian  Dockerfile.redhat  Dockerfile.rpm  build.sh
nanopdf-rs/include/: mupdf-ffi.h  mupdf.h  nanopdf.h
nanopdf-rs/include/mupdf/: fitz.h  pdf.h
nanopdf-rs/include/mupdf/fitz/: buffer.h  color.h  context.h  device.h  document.h  geometry.h  link.h  outline.h  pixmap.h  stream.h  system.h  version.h
nanopdf-rs/include/mupdf/pdf/: document.h  object.h
nanopdf-rs/scripts/: generate_headers.py  test-pkg-config.sh
nanopdf-rs/src/: lib.rs
nanopdf-rs/src/enhanced/: attachments.rs  bookmarks.rs  content.rs  drawing.rs  error.rs  metadata.rs  mod.rs  optimization.rs  page_ops.rs  writer.rs
nanopdf-rs/src/ffi/: annot.rs  archive.rs  buffer.rs  colorspace.rs  context.rs  cookie.rs  device.rs  display_list.rs  document.rs  font.rs  form.rs  geometry.rs  image.rs  link.rs  mod.rs  output.rs  path.rs  pdf_object.rs  pixmap.rs  safe_helpers.rs  stream.rs  text.rs
nanopdf-rs/src/ffi/enhanced/: mod.rs
nanopdf-rs/src/ffi/pdf_object/: array.rs  create.rs  dict.rs  mod.rs  string.rs  types.rs  utils.rs
nanopdf-rs/src/fitz/: archive.rs  async_io.rs  buffer.rs  colorspace.rs  cookie.rs  device.rs  display_list.rs  error.rs  font.rs  geometry.rs  glyph.rs  image.rs  link.rs  mod.rs  output.rs  parallel.rs  path.rs  pixmap.rs  render.rs  stext.rs  stream.rs  text.rs
nanopdf-rs/src/fitz/buffer/: core.rs  mod.rs  reader.rs  writer.rs
nanopdf-rs/src/pdf/: annot.rs  annot_render.rs  crypt.rs  filter.rs  form.rs  form_render.rs  interpret.rs  lexer.rs  mod.rs  object.rs
nanopdf-rs/src/pdf/filter/: ascii85.rs  asciihex.rs  ccitt.rs  chain.rs  dct.rs  flate.rs  jbig2.rs  lzw.rs  params.rs  predictor.rs  runlength.rs
nanopdf-rs/tests/: integration_tests.rs
nanopdf-rs/tests/fixtures/: README.md
pages/: .gitignore  README.md  angular.json  package.json  pnpm-lock.yaml
scripts/: README.md  deploy-gh-pages.sh  deploy.sh  sync-version.sh
test-pdfs/: README.md
(+45 files in other folders)
