[package]
name = "nanopdf"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A pure Rust PDF library - drop-in replacement for MuPDF with 100% API compatibility"
license = "MIT OR Apache-2.0"
authors = ["Lexmata <contact@lexmata.com>"]
repository = "https://github.com/lexmata/nanopdf"
homepage = "https://github.com/lexmata/nanopdf"
documentation = "https://docs.rs/nanopdf"
readme = "README.md"
keywords = ["pdf", "mupdf", "document", "parser", "rendering"]
categories = ["parsing", "multimedia::images", "text-processing"]

# Files to include in the crates.io package
# (tests excluded to keep package size small - PDF fixtures are large)
include = [
    "src/**/*",
    "benches/**/*",
    "include/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "build.rs",
    "nanopdf.pc.in",
    "mupdf.pc.in",
]

# Badges for crates.io
[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "nanopdf"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
thiserror = "2"
flate2 = "1"
aes = "0.8"
cbc = "0.1"
md-5 = "0.10"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fontdb = "0.22"
ttf-parser = "0.25"
base64 = "0.22"
weezl = "0.1"
jpeg2k = { version = "0.8", optional = true }
bytes = "1"
byteorder = "1"
rayon = { version = "1.10", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "rt", "sync", "macros", "rt-multi-thread", "time"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
jpeg2000 = ["jpeg2k"]
jbig2 = []
parallel = ["rayon"]
async = ["tokio", "futures"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "geometry"
harness = false

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "pdf_objects"
harness = false

# Debian package configuration (cargo-deb)
[package.metadata.deb]
maintainer = "Lexmata <contact@lexmata.com>"
copyright = "2025, Lexmata LLC"
license-file = ["LICENSE-MIT", "0"]
extended-description = """NanoPDF is a native Rust PDF library inspired by MuPDF.
It provides PDF parsing, rendering, and manipulation capabilities
with a clean Rust API."""
depends = "$auto"
section = "libs"
priority = "optional"
assets = [
    ["target/release/libnanopdf.so", "usr/lib/", "644"],
    ["target/release/libnanopdf.a", "usr/lib/", "644"],
    ["include/**/*", "usr/include/nanopdf/", "644"],
    ["nanopdf.pc", "usr/lib/pkgconfig/", "644"],
    ["mupdf.pc", "usr/lib/pkgconfig/", "644"],
    ["README.md", "usr/share/doc/nanopdf/README", "644"],
    ["LICENSE-MIT", "usr/share/doc/nanopdf/LICENSE-MIT", "644"],
    ["LICENSE-APACHE", "usr/share/doc/nanopdf/LICENSE-APACHE", "644"],
]

# RPM package configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/libnanopdf.so", dest = "/usr/lib64/", mode = "644" },
    { source = "target/release/libnanopdf.a", dest = "/usr/lib64/", mode = "644" },
    { source = "include/", dest = "/usr/include/nanopdf/", mode = "644", doc = false },
    { source = "nanopdf.pc", dest = "/usr/lib64/pkgconfig/", mode = "644" },
    { source = "mupdf.pc", dest = "/usr/lib64/pkgconfig/", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/nanopdf/README", mode = "644", doc = true },
    { source = "LICENSE-MIT", dest = "/usr/share/doc/nanopdf/LICENSE-MIT", mode = "644", doc = true },
    { source = "LICENSE-APACHE", dest = "/usr/share/doc/nanopdf/LICENSE-APACHE", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
glibc = "*"
